--- a/ProgettoJMAF/index.html
+++ b/ProgettoJMAF/index.html
@@ -65,23 +65,23 @@
             <h3>I nostri collaboratori</h3>
             <div class="coll-row">
             <div class="coll-int">
-                <img class="profile-img" src="../ProgettoJMAF/img/jhas.jpeg" alt="">
+                <img class="profile-img" src="img/jhas.jpeg" alt="">
                 <h6>Jhasmira Jaime</h6>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt sapiente molestiae explicabo cum dolore delectus enim, aspernatur veritatis fuga ex reiciendis, autem eum eaque dicta soluta nihil nulla minus quos.</p>
             </div>
             <div class="coll-int">
-                <img class="profile-img" src="../ProgettoJMAF/img/foto cv.jpg" alt="">
+                <img class="profile-img" src="img/foto cv.jpg" alt="">
                 <h6>Martina Orrico</h6>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt sapiente molestiae explicabo cum dolore delectus enim, aspernatur veritatis fuga ex reiciendis, autem eum eaque dicta soluta nihil nulla minus quos.</p>
             </div>
             <div class="coll-int">
-                <img class="profile-img" src="../ProgettoJMAF/img/andre.jpeg" alt="">
+                <img class="profile-img" src="img/andre.jpeg" alt="">
                 <h6>Andrea Spadoni</h6>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt sapiente molestiae explicabo cum dolore delectus enim, aspernatur veritatis fuga ex reiciendis, autem eum eaque dicta soluta nihil nulla minus quos.</p>
             </div>
             <div class="coll-row">
                 <div class="coll-int">
-                    <img class="profile-img" src="../ProgettoJMAF/img/fede.jpg" alt="">
+                    <img class="profile-img" src="img/fede.jpg" alt="">
                     <h6>Federico Mazzotta</h6>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt sapiente molestiae explicabo cum dolore delectus enim, aspernatur veritatis fuga ex reiciendis, autem eum eaque dicta soluta nihil nulla minus quos.</p>
                 </div>
