--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
             <div class="coll-row">
                 <div class="coll-int">
-                    <img class="profile-img" src="img/fede.jpg" alt="">
+                    <img class="profile-img" src="./img/fede.jpg" alt="">
                     <h6>Federico Mazzotta</h6>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt sapiente molestiae explicabo cum dolore delectus enim, aspernatur veritatis fuga ex reiciendis, autem eum eaque dicta soluta nihil nulla minus quos.</p>
                 </div>
